Final fix for overflowing PRE and IMG in articles
Finally, aligning the main container to the right fixes all problems with
overflows. PRE will now correctly show a scrollbar when content is wider,
IMG will just overflow and require some scrolling on narrow screens. Text
is rendered within the screen view, correctly.

--- a/css/_post-content.scss
+++ b/css/_post-content.scss
@@ -88,7 +88,6 @@ pre {
 	overflow: auto;
 	padding: 10px;
 	tab-size: 2;
-	white-space: pre-wrap;
 
 	code {
 		font-size: 1.3rem;
